apollo-router/src/plugins/authorization/snapshots/apollo_router__plugins__authorization__scopes__tests__array.snap
---
source: apollo-router/src/plugins/authorization/scopes.rs
expression: doc
---
{
    "read:user",
    "read:username",
    "review",
}
