apollo-router/src/plugins/authorization/snapshots/apollo_router__plugins__authorization__scopes__tests__filter_basic_query-4.snap
---
source: apollo-router/src/plugins/authorization/scopes.rs
expression: "TestResult {\n    query: QUERY,\n    extracted_scopes: &extracted_scopes,\n    scopes: [\"profile\".to_string(), \"read:user\".to_string(),\n                    \"read:username\".to_string()].into_iter().collect(),\n    result: doc,\n    paths,\n}"
---
query:

        {
            topProducts {
                type
                internal
            }

            me {
                id
                name
            }
        }
        
extracted_scopes: {"internal", "profile", "read:user", "read:username", "test"}
request scopes: ["profile", "read:user", "read:username"]
filtered:
query {
  topProducts {
    type
  }
  me {
    id
    name
  }
}

paths: ["/topProducts/internal"]
