apollo-router/src/plugins/authorization/snapshots/apollo_router__plugins__authorization__scopes__tests__fragment_fields.snap
---
source: apollo-router/src/plugins/authorization/scopes.rs
expression: "TestResult {\n    query: QUERY,\n    extracted_scopes: &extracted_scopes,\n    scopes: Vec::new(),\n    result: doc,\n    paths,\n}"
---
query:

        query {
            topProducts {
                type
                ...F
            }
        }

        fragment F on Product {
            reviews {
                body
            }
        }
        
extracted_scopes: {"review"}
request scopes: []
filtered:
{
  topProducts {
    type
  }
}

paths: ["/reviews/@"]
