apollo-router/src/plugins/authorization/snapshots/apollo_router__plugins__authorization__scopes__tests__interface_field-2.snap
---
source: apollo-router/src/plugins/authorization/scopes.rs
expression: paths
---
[
    Path(
        [
            Key(
                "itf",
            ),
            Key(
                "id",
            ),
        ],
    ),
]
